[package]
name = "agent_ledger"
version = "0.1.0"
description = "Agent Activity Ledger - on-chain attestations for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
